feat: support case name parser

--- a/data/formatted/parsed_field_schema.jsonc
+++ b/data/formatted/parsed_field_schema.jsonc
@@ -40,7 +40,9 @@
         "document_type": {
             "type": "string",
             "enum": [
-                "判决书"
+                "判决书",
+                "裁定书",
+                "调解书"
             ]
         },
         "judge": {
