--- a/data/formatted/parsed_field.jsonc
+++ b/data/formatted/parsed_field.jsonc
@@ -5,7 +5,7 @@
     "year": 2019,
     "cause": "机动车交通事故责任纠纷",
     "trial_procedure": "一审",
-    "case_type": "民事",
+    "case_type": "民事一审案件",
     "court": "集贤县人民法院",
     "document_type": "判决书",
     "judge": "王晓冬",
