--- a/data/formatted/parsed_field_schema.jsonc
+++ b/data/formatted/parsed_field_schema.jsonc
@@ -9,7 +9,7 @@
             "type": "string"
         },
         "year": {
-            "type": "number"
+            "type": "string"
         },
         "cause": {
             "type": "string"
