--- a/environment.yml
+++ b/environment.yml
@@ -6,7 +6,7 @@ dependencies:
   - backcall=0.2.0=py_0
   - blas=1.0=mkl
   - ca-certificates=2020.10.14=0
-  - certifi=2020.6.20=pyhd3eb1b0_3
+  - certifi=2020.11.8=py36h06a4308_0
   - cycler=0.10.0=py36_0
   - dbus=1.13.18=hb2f20db_0
   - decorator=4.4.2=py_0
@@ -46,9 +46,11 @@ dependencies:
   - mkl_fft=1.2.0=py36h23d657b_0
   - mkl_random=1.1.1=py36h0573a6f_0
   - ncurses=6.2=he6710b0_1
+  - numpy-base=1.19.2=py36hfa32c7d_0
   - olefile=0.46=py36_0
   - openssl=1.1.1h=h7b6447c_0
   - pandas=1.1.3=py36he6710b0_0
+  - pandoc=2.11=hb0f4dca_0
   - pcre=8.44=he6710b0_0
   - pexpect=4.8.0=py36_0
   - pickleshare=0.7.5=py36_0
@@ -57,6 +59,7 @@ dependencies:
   - prompt-toolkit=3.0.8=py_0
   - ptyprocess=0.6.0=py36_0
   - pygments=2.7.2=pyhd3eb1b0_0
+  - pypandoc=1.5=py_0
   - pyparsing=2.4.7=py_0
   - pyqt=5.9.2=py36h05f1152_2
   - python=3.6.12=hcff3b4d_2
