feat: support case_summary

--- a/data/formatted/parsed_field.jsonc
+++ b/data/formatted/parsed_field.jsonc
@@ -33,7 +33,8 @@
         {
             "controversy": "",
             "judgement": "支持",
-            "cause": ""
+            "cause": "",
+            "basis":""
         }
     ]
 }
