--- a/data/formatted/parsed_field_schema.jsonc
+++ b/data/formatted/parsed_field_schema.jsonc
@@ -102,6 +102,9 @@
                     },
                     "cause": {
                         "type": "string"
+                    },
+                    "basis": {
+                        "type": "string"
                     }
                 }
             }
