feat: add training data example

--- a/data/formatted/parsed_field.jsonc
+++ b/data/formatted/parsed_field.jsonc
@@ -31,10 +31,29 @@
     ],
     "case_summary": [
         {
-            "controversy": "",
-            "judgement": "支持",
-            "cause": "",
-            "basis":""
+            "controversy": "司法鉴定意见效力",
+            "judgement": null,
+            "cause": [],
+            "basis": []
+        },
+        {
+            "controversy": "隋文江何种标准对待",
+            "judgement": null,
+            "cause": [
+                "本院认为，机动车发生交通事故造成人身伤亡、财产损失的，由保险公司在交强险范围内予以赔偿，不足部分，由责任人赔偿。医疗费、伙食补助费，计15583.17元，交强险医疗费限额1万元，超出部分5583.17元由邸宝家赔偿。护理费、误工费、交通费、残疾赔偿金、精神抚慰金，计161366.30元，交强险死亡费限额11万元，超出部分51366.30元由邸宝家赔偿。财产损失650元，不超出交强险2000元限额。邸宝家提出的抗辩意见没有法律依据，不予采信。"
+            ],
+            "basis": [
+                "《中华人民共和国道路交通安全法》第七十六条、",
+                "《最高人民法院关于审理人身损害赔偿案件适用法律若干问题的解释》第十七条、第十八条、第十九条、第二十条、第二十一条、第二十二条、第二十三条、第二十四条、第二十五条、",
+                "《最高人民法院关于审理道路交通事故损害赔偿案件适用法律若干问题的解释》第十五条",
+                "《中华人民共和国民事诉讼法》第二百五十三条"
+            ]
+        },
+        {
+            "controversy": "隋文江各项损失合理数额",
+            "judgement": null,
+            "cause": [],
+            "basis": []
         }
     ]
 }
