--- a/data/formatted/parsed_field_schema.jsonc
+++ b/data/formatted/parsed_field_schema.jsonc
@@ -101,10 +101,16 @@
                         ]
                     },
                     "cause": {
-                        "type": "string"
+                        "type": "array",
+                        "items": {
+                            "type": "string"
+                        }
                     },
                     "basis": {
-                        "type": "string"
+                        "type": "array",
+                        "items": {
+                            "type": "string"
+                        }
                     }
                 }
             }
